--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Coiny&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend+Deca:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik+Spray+Paint&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Coiny&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend+Deca:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik+Spray+Paint&family=Zalando+Sans:ital,wght@0,200..900;1,200..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -21,9 +26,8 @@
                     <img src="Momochi.png" alt="" class="logo">
                     <li><a href="#beranda">Beranda</a></li>
                     <li><a href="#produk">Produk</a></li>
-                    <li><a href="cart.html">Keranjang</a></li>
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="register.html">Register</a></li>
+                    <li><a href="#keranjang">Keranjang</a></li>
+                    <li><a href="#footer">Footer</a></li>
                 </ul>
             </nav>
         </header>
@@ -40,82 +44,110 @@
                         <img src="Momochi.png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
+                        <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
                     <div class="card-produk">
                         <img src="Momochi.png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
+                        <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
                     <div class="card-produk">
                         <img src="Momochi.png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
+                        <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
                     <div class="card-produk">
                         <img src="Momochi.png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
+                        <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
                     <div class="card-produk">
                         <img src="Momochi.png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
+                        <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
                     <div class="card-produk">
                         <img src="Momochi.png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
+                        <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
                     <div class="card-produk">
                         <img src="Momochi.png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
+                        <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
                     <div class="card-produk">
                         <img src="Momochi.png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
+                        <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
                     <div class="card-produk">
                         <img src="Momochi.png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
+                        <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
                     <div class="card-produk">
                         <img src="Momochi.png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
+                        <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
                     <div class="card-produk">
                         <img src="Momochi.png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
+                        <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
                     <div class="card-produk">
                         <img src="Momochi.png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
+                        <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
                     <div class="card-produk">
                         <img src="Momochi.png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
+                        <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
                     <div class="card-produk">
                         <img src="Momochi.png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
+                        <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
                     <div class="card-produk">
                         <img src="Momochi.png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
+                        <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
                 </div>
             </div>
         </main>
-        <footer>
-            <p>&copy; 2023 Toko Elegan. Semua hak dilindungi.</p>
+        <div class="keranjang" id="keranjang">
+            <h1>Keranjang</h1>
+            <ol style="padding: 0;">
+                <li id="daftar-pesanan"></li>
+            </ol>
+
+            <h3>Total: Rp <span id="total-harga">0</span></h3>
+
+            <button onclick="checkoutWA()" class="orderwa">
+                Order via WhatsApp
+            </button>
+
+        </div>
+        <footer id="footer">
+            <p>&copy; 2026 Desert Store. Semua hak dilindungi.</p>
         </footer>
     </div>
     <script src="script.js"></script>
