--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <li><a href="#beranda" class="btn">Beranda</a></li>
                     <li><a href="#produk" class="btn">Produk</a></li>
                     <li><a href="#keranjang" class="btn">Keranjang</a></li>
-                    <li><a href="#footer" class="btn">Footer</a></li>
+                    <li><a href="#footer" class="btn">Kontak</a></li>
                 </ul>
             </nav>
         </header>
