--- a/index.html
+++ b/index.html
@@ -142,6 +142,12 @@
                         Rp.5,000
                         <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
+                    <div class="card-produk">
+                        <img src="Momochi.png" alt="" style="width: 50px;">
+                        <label>Original</label>
+                        Rp.5,000
+                        <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
+                    </div>
                 </div>
             </div>
         </main>
