--- a/index.html
+++ b/index.html
@@ -81,97 +81,97 @@
             <div class="menu" id="produk">
                 <h1>Produk</h1>
                 <div class="card">
-                    <div class="card-produk">
+                    <div class="card-produk fade-in">
                         <img src="images/bg-main (1).png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
                         <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
-                    <div class="card-produk">
+                    <div class="card-produk fade-in">
                         <img src="images/bg-main (2).png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
                         <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
-                    <div class="card-produk">
+                    <div class="card-produk fade-in">
                         <img src="images/bg-main (3).png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
                         <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
-                    <div class="card-produk">
+                    <div class="card-produk fade-in">
                         <img src="images/bg-main (1).png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
                         <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
-                    <div class="card-produk">
+                    <div class="card-produk fade-in">
                         <img src="images/bg-main (2).png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
                         <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
-                    <div class="card-produk">
+                    <div class="card-produk fade-in">
                         <img src="images/bg-main (3).png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
                         <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
-                    <div class="card-produk">
+                    <div class="card-produk fade-in">
                         <img src="images/bg-main (1).png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
                         <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
-                    <div class="card-produk">
+                    <div class="card-produk fade-in">
                         <img src="images/bg-main (2).png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
                         <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
-                    <div class="card-produk">
+                    <div class="card-produk fade-in">
                         <img src="images/bg-main (3).png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
                         <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
-                    <div class="card-produk">
+                    <div class="card-produk fade-in">
                         <img src="images/bg-main (1).png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
                         <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
-                    <div class="card-produk">
+                    <div class="card-produk fade-in">
                         <img src="images/bg-main (2).png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
                         <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
-                    <div class="card-produk">
+                    <div class="card-produk fade-in">
                         <img src="images/bg-main (3).png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
                         <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
-                    <div class="card-produk">
+                    <div class="card-produk fade-in">
                         <img src="images/bg-main (1).png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
                         <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
-                    <div class="card-produk">
+                    <div class="card-produk fade-in">
                         <img src="images/bg-main (2).png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
                         <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
-                    <div class="card-produk">
+                    <div class="card-produk fade-in">
                         <img src="images/bg-main (3).png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
                         <button onclick="tambahKeKeranjang('Mochi Original', 5000)">Beli</button>
                     </div>
-                    <div class="card-produk">
+                    <div class="card-produk fade-in">
                         <img src="images/bg-main (1).png" alt="" style="width: 50px;">
                         <label>Original</label>
                         Rp.5,000
